# cusub

./: .gitignore  .gitmodules  .prettierignore  README.md  frames.gv  sim_bugs_fails.txt
cusub_common/cusub_common/: CMakeLists.txt  diveday_mk1.perspective  diveday_mk2.perspective  mk.2diveday.perspective  package.xml
cusub_common/cusub_common_bringup/: CMakeLists.txt  package.xml
cusub_common/cusub_common_bringup/config/: leviathan_ar_ekf.yaml  leviathan_ekf.yaml  leviathan_map_ekf.yaml  leviathan_stereo_ekf.yaml  triton_ekf.yaml  triton_map_ekf.yaml  triton_odom_ekf.yaml
cusub_common/cusub_common_bringup/launch/: drivers.launch  ekf.launch  full_torpedo_cam.launch  leviathan_2_sim.launch  leviathan_3_sim.launch  leviathan_4_sim.launch  leviathan_sim.launch  leviathan_sim_vel.launch  leviathan_sub.launch  local_control.launch  torpedo_cam.launch  triton_sim.launch  triton_sub.launch
cusub_common/drivers/downcam_respawner/: CMakeLists.txt  nodelet_plugins.xml  package.xml
cusub_common/drivers/occam/: CMakeLists.txt  nodelet_plugins.xml  package.xml
cusub_common/drivers/wl_dvl/: CMakeLists.txt  README.md  package.xml  setup.py
cusub_common/motor_controllers/bangbang/: package.xml
cusub_cortex/cusub_cortex/: CMakeLists.txt  package.xml
cusub_cortex/mapper/: CMakeLists.txt  package.xml
cusub_cortex/mapper/action/: mapper.action
cusub_cortex/mapper/config/: mapper.yaml  sim_truth.yaml
cusub_cortex/mapper/launch/: mapper.launch  occam_tf.launch
cusub_cortex/mapper/scripts/: landmark.py  mapper.py  mapper_client.py  mapper_server.py  odom_faker.py  prior_landmark.py  setpoint.py  sim_truth_pub.py
cusub_perception/cusub_perception/: CMakeLists.txt  package.xml
cusub_perception/darknet_multiplexer/: CMakeLists.txt  nodelet_plugins.xml  package.xml
cusub_perception/darknet_multiplexer/config/: darknet_multiplexer.yaml
cusub_perception/darknet_multiplexer/darknet_multiplexer/: CMakeLists.txt  nodelet_plugins.xml  package.xml
cusub_perception/darknet_multiplexer/darknet_multiplexer_msgs/: CMakeLists.txt  package.xml
cusub_perception/darknet_multiplexer/launch/: drawer.launch  multiplexer.launch  no_nodelet_drawer.launch  no_nodelet_multiplexer.launch
cusub_perception/darknet_multiplexer/src/: drawer.cpp  get_classes.cpp  multiplexer.cpp
cusub_perception/darknet_multiplexer/srv/: DarknetCameras.srv  DarknetClasses.srv
cusub_perception/detection_tree/: CMakeLists.txt  package.xml  setup.py
cusub_perception/detection_tree/detection_tree/: CMakeLists.txt  README.md  nodelet_plugins.xml  package.xml  setup.py
cusub_perception/detection_tree/detection_tree_msgs/: CMakeLists.txt  package.xml
cusub_perception/detection_tree/launch/: detection_tree.launch
cusub_perception/detection_tree/msg/: Dvector.msg
cusub_perception/detection_tree/scripts/: detection_tree_node.py  test_listener.py
cusub_perception/detection_tree/src/: detection_tree_node.cpp
cusub_perception/localizer/: CMakeLists.txt  localizer_docs.md  package.xml  setup.py
cusub_perception/localizer/config/: localizer_config.yaml
cusub_perception/localizer/launch/: cam_pose_to_map.launch  localizer.launch  localizer_no_nodelet.launch  no_nodelet_localizer.launch
cusub_perception/localizer/localizer/: CMakeLists.txt  nodelet_plugins.xml  package.xml
cusub_perception/localizer/localizer_msgs/: CMakeLists.txt  package.xml
cusub_perception/localizer/msg/: CameraObjectPose.msg  Detection.msg
cusub_perception/localizer/scripts/: localizer_client.py  tmp.txt
cusub_perception/localizer/src/: camera_pose_to_map.py  jiangshi_watershed.cpp  localizer.cpp  pose_generator.cpp  start_gate_hough.cpp  start_gate_watershed.cpp  z_plane.cpp
cusub_perception/localizer/srv/: ClassicalBox2Pose.srv  ClassicalBoxes2Poses.srv
cusub_perception/localizer/unit_tests/: jiangshi_watershed_test.cpp  start_gate_hough_test.cpp
cusub_perception/perception_control/: CMakeLists.txt  nodelet_plugins.xml  package.xml
cusub_perception/perception_control/action/: OrbitBuoy.action  PathOrient.action  VisualPoint.action  VisualServo.action
cusub_perception/perception_control/config/: perception_control.yaml
cusub_perception/perception_control/launch/: orbit.launch  perception_control.launch  tracking.launch
cusub_perception/perception_control/src/: AffineTransform.cpp  BoundingBox.cpp  ImageData.cpp  KLTPointTracker.cpp  ObjectTracker.cpp  PointTracker.cpp  Tracking.cpp  VisualMovement.cpp  VisualPoint.cpp  bb_controller.cpp  bb_proportional.cpp  bb_rotational.cpp  orbit.cpp  path_orient.cpp  visual_servo.cpp
cusub_perception/perception_control/unit_tests/: path_orientation_test.cpp  tracker_unit_test.cpp
cusub_perception/tracking/: CMakeLists.txt  nodelet_plugins.xml  package.xml
cusub_perception/tracking/cfg/: image_topics.txt
cusub_perception/tracking/launch/: tracking.launch  tracking_nodelet.launch
cusub_perception/tracking/src/: AffineTransform.cpp  BoundingBox.cpp  ImageData.cpp  ImageTools.cpp  KLTPointTracker.cpp  ObjectTracker.cpp  PointTracker.cpp  Tracking.cpp  orbit.cpp
cusub_perception/tracking/srv/: TrackingConfig.srv
cusub_perception/tracking/unit_tests/: tracker_unit_test.cpp
cusub_sim/cusub_sim/: CMakeLists.txt  package.xml
cusub_sim/cusub_sim_bringup/: CMakeLists.txt  package.xml
cusub_sim/cusub_sim_bringup/config/: stress_tester.yaml
cusub_sim/cusub_sim_bringup/launch/: TRANSDEC_21.launch  TRANSDEC_7.launch  alllaunch_transdec.launch  baby_yoda_description.launch  divewell_all_task.launch  divewell_empty.launch  divewell_single_task.launch  divewell_startgate.launch  hercules.launch  herkules.launch  leviathan_description.launch  leviathan_description2.launch  leviathan_description_TRANSDEC7.launch  ocean_floor.launch  triton_description.launch
cusub_sim/cusub_sim_bringup/scripts/: stress_tester.py
cusub_sim/robosub_descriptions/: package.xml
cusub_sim/robosub_descriptions/config/: roulette_control.yaml  triangular_bouy_control.yaml
cusub_sim/robosub_descriptions/launch/: TRANSDEC.launch  divewell.launch  upload.launch
(+1030 files in other folders)
