<?xml version="1.0"?>
<package>
  <name>cusub_common_bringup</name>
  <version>0.0.7</version>
  <description>drivers metapackage</description>
  <maintainer email="jeve0658@colorado.edu">Jeff Venicx</maintainer>
  <license>GPLv3</license>

  <url type="website">https://github.com/CU-Robosub/Drivers</url>
  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->

  <buildtool_depend>catkin</buildtool_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- You can specify that this package is a metapackage here: -->

    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
