<?xml version="1.0"?>
<package>
  <name>mapper</name>
  <version>0.0.0</version>
  <description>The mapper package</description>

  <maintainer email="luba6098@colorado.edu"></maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>localizer</run_depend>

  <export></export>
</package>
