<package>
    <name>cusub_perception</name>
    <version>0.1.0</version>
    <description>meta package for all vision and perception packages</description>
    <maintainer email="jeve0658@colorado.edu">Jeff Venicx</maintainer>
    <author>Michael Marques, Jeff Venicx, Luke Barbier</author>
    <url type="repository">https://github.com/CU-Robosub </url>
    <license>BSD</license>
    
    <buildtool_depend>catkin</buildtool_depend>
    
    <run_depend>perception</run_depend>
    <run_depend>localizer</run_depend>
    <run_depend>darknet_cv</run_depend>


    <export>
        <metapackage/>
    </export>
</package>