<?xml version="1.0"?>
<package format="2">
  <name>cusub_sim_bringup</name>
  <version>0.0.0</version>
  <description>The cusub_sim_bringup package</description>
  <maintainer email="robosub@colorado.edu">robosub</maintainer>
  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>