<package>
  <name>ros_indigosdk</name>
  <version>2.0.0</version>
  <description>Driver for Occam Indigo SDK supported devices</description>

  <license>GPLv2</license>

  <maintainer email="info@occamvisiongroup.com">Occam Vision Group</maintainer>
  <author email="info@occamvisiongroup.com">Occam Vision Group</author>

  <url type="website">http://occamvisiongroup.com</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>image_transport</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>camera_info_manager</build_depend>
  <build_depend>sensor_msgs</build_depend>

  <run_depend>image_transport</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>camera_info_manager</run_depend>
  <run_depend>sensor_msgs</run_depend>


  <export>
    <cpp lflags="-L${prefix}/lib" cflags="-I${prefix}/include -I${prefix}/msg/cpp"/>
  </export>
</package>
